--- a/templates/Admin/dashborad.html.twig
+++ b/templates/Admin/dashborad.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Acceuil{% endblock %}
 {% block title2 %}Acceuil{% endblock %}
 
+{% block activeDash %}
+    active
+{% endblock %}
+
+
 {% block headers %}
     <div class="container-fluid">
         <div class="header-body">
