--- a/templates/author/new.html.twig
+++ b/templates/author/new.html.twig
@@ -3,6 +3,10 @@
 {% block title %}New Author{% endblock %}
 {% block title2 %}Nouveau Auteur{% endblock %}
 
+{% block activeAuthor %}
+    active
+{% endblock %}
+
 
 {% block content %}
     <div class="row">
