--- a/templates/editor/show.html.twig
+++ b/templates/editor/show.html.twig
@@ -1,30 +1,67 @@
-{% extends 'base.html.twig' %}
+{% extends 'Admin/admin_template.html.twig' %}
 
 {% block title %}Editor{% endblock %}
+{% block title2 %}Editeur{% endblock %}
 
-{% block body %}
-    <h1>Editor</h1>
+{% block activeEditor %}
+    active
+{% endblock %}
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ editor.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ editor.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ editor.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+{% block content %}
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-xl-8 order-xl-1">
+            <div class="card shadow">
+                {% for message in app.session.flashBag.get('failed') %}
+                    <div class="alert alert-dismissible alert-danger">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <strong>{{ message }}</strong>
+                    </div>
+                {% endfor %}
+                <div class="card-header bg-white border-0">
+                    <div class="row align-items-center">
+                        <div class="col-8">
+                            <h1 class="mb-0">
+                                <a href="{{ path('editor_index') }}">
+                                    <i class="fas fa-arrow-left text-primary"></i>
+                                </a>
+                                Editeur
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table align-items-center table-flush">
+                            <tbody>
+                            <tr>
+                                <th>Nom de l'éditeur</th>
+                                <td>{{ editor.name }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
 
-    <a href="{{ path('editor_index') }}">back to list</a>
+                        <hr class="my-4" />
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h3>Decription</h3>
+                                <p>{{ editor.description }}</p>
+                            </div>
+                        </div>
 
-    <a href="{{ path('editor_edit', {'id': editor.id}) }}">edit</a>
+                    </div>
 
-    {{ include('editor/_delete_form.html.twig') }}
+                    <br/>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <a href="{{ path('editor_edit', {'id': editor.id}) }}" class="btn btn-info">Modifier</a>
+                        </div>
+                        <div class="col">
+                            {{ include('editor/_delete_form.html.twig') }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
