--- a/templates/member/index.html.twig
+++ b/templates/member/index.html.twig
@@ -3,7 +3,9 @@
 {% block title %}Member index{% endblock %}
 {% block title2 %}Membres{% endblock %}
 
-
+{% block activeUsagers %}
+    active
+{% endblock %}
 
 {% block content %}
 
@@ -11,7 +13,7 @@
         <div class="col">
             <div class="card shadow">
                 <div class="card-header border-0">
-                    <h3 class="mb-0">Listes des membres</h3>
+                    <h3 class="mb-0">Listes des usagers</h3>
                 </div>
                 <div class="table-responsive">
                     <table class="table align-items-center table-flush">
