--- a/templates/member/new.html.twig
+++ b/templates/member/new.html.twig
@@ -3,6 +3,10 @@
 {% block title %}New Member{% endblock %}
 {% block title2 %}Nouveau membre{% endblock %}
 
+{% block activeUsagers %}
+    active
+{% endblock %}
+
 
 {% block content %}
     <div class="row">
