--- a/templates/member/show.html.twig
+++ b/templates/member/show.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Usager{% endblock %}
 {% block title2 %}Usager{% endblock %}
 
+{% block activeUsagers %}
+    active
+{% endblock %}
+
+
 {% block content %}
     <div class="row">
         <div class="col-sm-2"></div>
