--- a/templates/Admin/admin_template.html.twig
+++ b/templates/Admin/admin_template.html.twig
@@ -64,33 +64,33 @@
                     <!-- Navigation -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('admin_dashboard') }}">
+                            <a class="nav-link {% block activeDash %}{% endblock %}" href="{{ path('admin_dashboard') }}">
                                 <i class="ni ni-tv-2 text-primary"></i> Acceuil
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('author_index') }}">
+                            <a class="nav-link {% block activeAuthor %}{% endblock %}" href="{{ path('author_index') }}">
                                 <i class="ni ni-badge text-blue"></i> Auteurs
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('editor_index') }}">
+                            <a class="nav-link {% block activeEditor %}{% endblock %}" href="{{ path('editor_index') }}">
                                 <i class="ni ni-building text-purple"></i> Maison d'edition
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('member_index') }}">
+                            <a class="nav-link {% block activeTheme %}{% endblock %}" href="{{ path('theme_index') }}">
                                 <i class="ni ni-tag text-blue"></i> Thèmes
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('book_index') }}">
+                            <a class="nav-link {% block activeBook %}{% endblock %}" href="{{ path('book_index') }}">
                                 <i class="ni ni-books text-pink"></i> Livres
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('member_index') }}">
-                                <i class="ni ni-single-02 text-orange"></i> Membres
+                            <a class="nav-link {% block activeUsagers %}{% endblock %}" href="{{ path('member_index') }}">
+                                <i class="ni ni-single-02 text-orange"></i> Usagers
                             </a>
                         </li>
                     </ul>
