--- a/templates/author/show.html.twig
+++ b/templates/author/show.html.twig
@@ -3,11 +3,21 @@
 {% block title %}Author{% endblock %}
 {% block title2 %}Auteur{% endblock %}
 
+{% block activeAuthor %}
+    active
+{% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-xl-8 order-xl-1">
             <div class="card shadow">
+                {% for message in app.session.flashBag.get('failed') %}
+                    <div class="alert alert-dismissible alert-danger">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <strong>{{ message }}</strong>
+                    </div>
+                {% endfor %}
                 <div class="card-header bg-white border-0">
                     <div class="row align-items-center">
                         <div class="col-8">
@@ -40,6 +50,9 @@
                         </div>
 
                     </div>
+                    <a href="{{ path('bookByAuthEdit', {'id': author.id, 'name': author.name, 'var': "Author"}) }}">
+                        Voir tous ces livres
+                    </a>
 
                     <br/>
                     <div class="row">
