--- a/templates/theme/_delete_form.html.twig
+++ b/templates/theme/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('theme_delete', {'id': category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('theme_delete', {'id': theme.id}) }}" onsubmit="return confirm('Etes vous sûre de vouloir supprimer ce thème ?');">
     <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-    <button class="btn">Delete</button>
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ theme.id) }}">
+    <button class="btn btn-warning">Supprimer</button>
 </form>
