--- a/templates/theme/edit.html.twig
+++ b/templates/theme/edit.html.twig
@@ -1,13 +1,32 @@
-{% extends 'base.html.twig' %}
+{% extends 'Admin/admin_template.html.twig' %}
 
-{% block title %}Edit Theme{% endblock %}
+{% block title %}Edit theme{% endblock %}
+{% block title2 %}Modification - theme{% endblock %}
 
-{% block body %}
-    <h1>Edit Theme</h1>
+{% block activeTheme %}
+    active
+{% endblock %}
 
-    {{ include('theme/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('theme_index') }}">back to list</a>
-
-    {{ include('theme/_delete_form.html.twig') }}
+{% block content %}
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-xl-8 order-xl-1">
+            <div class="card bg-secondary shadow">
+                <div class="card-header bg-white border-0">
+                    <div class="row align-items-center">
+                        <div class="col-8">
+                            <h1 class="mb-0">
+                                <a href="{{ path('theme_index') }}" class="fas fa-arrow-left text-primary"></a>
+                                Modification du thème
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    {{ include('theme/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
