--- a/templates/theme/index.html.twig
+++ b/templates/theme/index.html.twig
@@ -1,30 +1,46 @@
 {% extends 'Admin/admin_template.html.twig' %}
 
-{% block title %}Category index{% endblock %}
+{% block title %}Theme index{% endblock %}
 
-{% block title2 %}Liste des catégories{% endblock %}
+{% block title2 %}Liste des thèmes{% endblock %}
 
+{% block activeTheme %}
+    active
+{% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="col">
             <div class="card shadow">
+                {% for message in app.session.flashBag.get('success') %}
+                    <div class="alert alert-dismissible alert-success">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <strong>{{ message }}</strong>
+                    </div>
+                {% endfor %}
                 <div class="card-header border-0">
-                    <h3 class="mb-0">Listes des livres</h3>
+                    <h3 class="mb-0">
+                        Listes des thèmes
+                        <span class="text-success mr-2">
+                            ({{ theme.totalItemCount }} trouvés !)
+                        </span>
+                    </h3>
                 </div>
                 <div class="table-responsive">
                     <table class="table align-items-center table-flush">
                         <thead class="thead-light">
                         <tr>
-                            <th>Id</th>
+                            <th>N°</th>
                             <th>Name</th>
-                            <th>actions</th>
+                            <th></th>
                         </tr>
                         </thead>
                         <tbody>
+                        {% set comp =1+(10*(theme.currentPageNumber-1)) %}
                         {% for th in theme %}
                             <tr>
-                                <td>{{ th.id }}</td>
+                                <td>{{ comp }}</td>
+                                {% set comp = comp+1 %}
                                 <td>{{ th.name }}</td>
                                 <td class="text-right">
                                     <div class="dropdown">
@@ -41,20 +57,20 @@
                             </tr>
                         {% else %}
                             <tr>
-                                <td colspan="8">Aucun catégorie trouvée</td>
+                                <td colspan="8">Aucun thème trouvé</td>
                             </tr>
                         {% endfor %}
                         </tbody>
                     </table>
                 </div>
                 <div class="navigation">
-                    {{ knp_pagination_render(categories) }}
+                    {{ knp_pagination_render(theme) }}
                 </div>
             </div>
             <br/>
 
 
-            <a href="{{ path('theme_new') }}" class="btn btn btn-primary">Ajouter une catégorie</a>
+            <a href="{{ path('theme_new') }}" class="btn btn btn-primary">Ajouter un thème</a>
             <br/><br/><br/>
         </div>
     </div>
