--- a/templates/theme/show.html.twig
+++ b/templates/theme/show.html.twig
@@ -1,26 +1,60 @@
-{% extends 'base.html.twig' %}
+{% extends 'Admin/admin_template.html.twig' %}
 
 {% block title %}Theme{% endblock %}
+{% block title2 %}Theme{% endblock %}
 
-{% block body %}
-    <h1>Theme</h1>
+{% block activeTheme %}
+    active
+{% endblock %}
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ theme.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ theme.name }}</td>
-            </tr>
-        </tbody>
-    </table>
+{% block content %}
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-xl-8 order-xl-1">
+            <div class="card shadow">
+                {% for message in app.session.flashBag.get('failed') %}
+                    <div class="alert alert-dismissible alert-danger">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <strong>{{ message }}</strong>
+                    </div>
+                {% endfor %}
+                <div class="card-header bg-white border-0">
+                    <div class="row align-items-center">
+                        <div class="col-8">
+                            <h1 class="mb-0">
+                                <a href="{{ path('theme_index') }}">
+                                    <i class="fas fa-arrow-left text-primary"></i>
+                                </a>
+                                Auteur
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table align-items-center table-flush">
+                            <tbody>
+                            <tr>
+                                <th>Nom du thème</th>
+                                <td>{{ theme.name }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
 
-    <a href="{{ path('theme_index') }}">back to list</a>
+                        <hr class="my-4" />
+                    </div>
 
-    <a href="{{ path('theme_edit', {'id': theme.id}) }}">edit</a>
-
-    {{ include('theme/_delete_form.html.twig') }}
+                    <br/>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <a href="{{ path('theme_edit', {'id': theme.id}) }}" class="btn btn-info">Modifier</a>
+                        </div>
+                        <div class="col">
+                            {{ include('theme/_delete_form.html.twig') }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
